service-a/00_namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: service-a
  labels:
    istio.io/rev: asm-managed
