service-a/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-a
  name: service-a
  namespace: service-a
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: http # adding for Istio
  selector:
    app: service-a
